--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,23 @@
-/***************************** 
+/*****************************
 *
 * Author: Giovanni De Andre
 * Game styles v1.0
 * 05/2018
 *
 ******************************/
+
+html {
+    box-sizing: border-box;
+}
+
+*, *:after, *:before {
+    box-sizing: inherit;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
 
 body {
     background-color: rgba(80, 104, 211, 0.774);
@@ -18,7 +31,8 @@ body {
 }
 
 canvas {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 600px;
     margin: 2em 0 0;
 }
@@ -117,8 +131,8 @@ ul {
 
 .modal__screen {
     position: absolute;
-    max-width: 480px;
-    width: 100%;
+    max-width: 600px;
+    width: 90%;
     background-color: #fff;
     padding: 4em;
     -webkit-box-shadow: 0 30px 70px 0 rgba(0, 0, 0, 0.123);
@@ -296,6 +310,86 @@ a span:hover {
     visibility: visible;
     opacity: 1;
     z-index: 2000;
+}
+
+
+/* GAME CONTROLS */
+.game-control  {
+    position: fixed;
+    right: 10%;
+    top: 25%;
+    bottom: 0;
+    width: 15em;
+    height: 4em;
+}
+.game-control__keyboard {
+    width: 100%;
+    font-family: "Luckiest Guy";
+    text-transform: uppercase;
+}
+
+.game-control__keyboard span {
+    width: 33%;
+    padding: 0.5em;
+    margin: 1em auto;
+    border-radius: 4px;
+    font-size: 0.85em;
+    background-color: #fff;
+    border: thick solid #000;
+    text-align: center;
+    line-height: initial;
+}
+
+.game-control__keyboard span:nth-child(1) {
+    display: block;
+}
+/* PLAYER MENU */
+.player-menu {
+    display: flex;
+}
+.player-menu li {
+    width: calc(100% / 5);
+    height: 96px;
+    padding: 0.5em;
+}
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10%;
+    cursor: pointer;
+    background: transparent;
+    transition: 0.3s;
+}
+.img-wrapper figcaption {
+    position: absolute;
+    bottom: 0;
+    background: rgba(229, 255, 255, 0.507);
+    color: #000000;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    pointer-events: none;
+}
+.img-wrapper img {
+    width: 100%;
+    display: block;
+    margin: auto;
+    position: absolute;
+    top: -1.5em;
+    bottom: 0;
+    pointer-events: none;
+}
+.img-wrapper.isSelected {
+    background-color: rgba(176, 255, 235, 0.781);
+    background: linear-gradient(180deg, rgba(176, 255, 235, 0) 30%, rgba(176, 255, 235, 0.781) 100%);
+    transition: 0.3s;
+}
+
+.img-wrapper:hover {
+    background-color: rgba(176, 255, 235, 0.781);
+    background: linear-gradient(180deg, rgba(176, 255, 235, 0) 30%, rgba(176, 255, 235, 0.781) 100%);
 }
 
 /* RWD */
